2018-07-09  Karl Berry  <karl@freefriends.org>

	* writefont.c (write_fontdescriptor) [ENABLE_PDF_CHARSET]:

2018-06-13  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexlib.h: Output correct Unicode strings on console
	(w32 only).

2018-06-12  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf.cc: Free unused memory (w32 only).

2018-06-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf.cc: Remove xfree(file_name) in order to avoid
	to output garbage.
	* pdftoepdf-newpoppler.cc: Remove _WIN32 changes, since
	utf-8 names are transformed to Unicode and _wopened
	in poppler.

2018-06-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* ptexlib.h, pdftoepdf.cc, pdftoepdf-newpoppler.cc:
	Allow non-ascii file names for pdfTeX with UTF-8 source files
	(w32 only). The function is enabled by setting
	'command_line_encoding=utf-8' in texmf.cnf.

2018-05-29  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexlib.h: Discard the changes on 2018-05-11, since
	'command_line_encoding=utf-8' is not so natural for
	pdfTeX (w32 only).

2018-05-13  Joseph Wright  <joseph.wright@morningstar2.co.uk>

	* pdftex.web: New primitive \expanded based on original
	  suggestion by Heiko Oberdiek, and with work by
	  Bruno Le Floch and David Carlisle (on behalf of The LaTeX Project).
        (expanded_code): new @d, new cases.
        https://mailman.ntg.nl/pipermail/ntg-pdftex/2018-May/004233.html

2018-05-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* ptexlib.h: Allow non-ascii file names in pdfTeX (w32 only).

2018-04-28  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* pdftoepdf-newpoppler.cc, pdftosrc-newpoppler.cc:
	Support poppler 0.64.0.

2018-04-14  Karl Berry  <karl@tug.org>

	* TeX Live 2018 release, pdftex 1.40.19.

2018-04-04  Jerry James  <loganjerry@gmail.com>

	* pdftoepdf-newpoppler.cc: Do not copy a Dict, get a reference instead.

2018-03-24  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>
            Hironori Kitagawa  <h_kitagawa2001@yahoo.co.jp>
