@@ -1,4 +1,3 @@
 #!/bin/bash
 jarpath=`kpsewhich --progname=arara --format=texmfscripts arara.jar`
 java -jar "$jarpath" "$@"
-
